[project]
name = "aria-personal-assistant"
version = "0.1.0"
description = "ARIA - AI Reasoning & Interactive Assistant powered by Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.8",
    "langgraph>=0.6.6",
    "python-dotenv>=1.1.1",
]
